form spacing fix

--- a/web/themes/custom/myusf/sass/src/partials/_forms.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_forms.scss
@@ -12,7 +12,7 @@ form {
 	legend {
     	font-size: 1rem;
     	font-weight: 700;
-    	margin-bottom: 1rem;
+    	margin-bottom: .5rem;
 	}
 	.form-control {
 		font-size: .9rem;
@@ -22,6 +22,7 @@ form {
 	.form-group {
 	    padding-left: 0;
 	    padding-right: 0;
+	    margin-bottom:0;
 	}
 	.form-select {
 	    border-radius: 0;
